--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,8 +1,13 @@
 {% extends 'index.html' %}
 {% block content %}
-<h1>products</h1>
+<div class="productsContainer">
+<h1>Products overzicht</h1>
 {% for products in products.all %}
+<a href="products/{{products.id}}">
 <img src="{{ products.image.url }}" />
+</a>
 <h6>{{ products.body }}</h6>
+
 {% endfor %}
 {% endblock %}
+</div>
