--- a/portfolio/static/css/stylesheet.css
+++ b/portfolio/static/css/stylesheet.css
@@ -1,3 +1,6 @@
-body {
-    background-color: antiquewhite;
-    }
+.productsContainer {
+    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
