--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -7,8 +7,10 @@
 <figure class="productImg">
 <img src="{{ products.image.url }}" />
 </figure>
+<div class="textPart">
 <h6>{{ products.body }}</h6>
 <a href="products/{{products.id}}">Details</a>
+</div>
 </div>
 </div>
 {% endfor %}
